Feat: auto replica

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,23 @@ eureka.instance.metadata-map.app-name=${spring.application.name}
 spring.redis.host=${REDIS_HOST:127.0.0.1}
 spring.redis.port=6379
 
-#2GB
+# 2GB
 decs.disk.max=2048
+decs.adaptive.nct=12
+decs.adaptive.oct=36
+decs.adaptive.ema-alpha=0.5
+decs.predict.script.path=./src/main/resources/test.py
+
+# minute
+decs.time-window=60
+decs.scheduler.lstm="0 50 * * * ?"
+decs.scheduler.adaptive="0 10,30 * * * ?"
+
+decs.popularity-threshold=10
+decs.tc=0.2
+decs.ti=0.1
+# alpha = 1 means ignore prediction result
+decs.alpha=1 
+decs.beta=1
+decs.gamma=1
+
