Feat: adpative prediction

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,22 @@ decs.disk.max=2048
 decs.adaptive.nct=12
 decs.adaptive.oct=36
 decs.adaptive.ema-alpha=0.5
+decs.adaptive.pcf-init=0.5
+decs.adaptive.step=0.05
+
+# 若连续 5 次预测的偏差超过 1000，则对 pcf value 调整 0.05
+
+decs.adaptive.pcf-value-threshold=1000
+decs.adaptive.pcf-count-threshold=5
+
 decs.predict.script.path=./src/main/resources/test.py
 
 # minute
 decs.time-window=60
 decs.scheduler.lstm="0 50 * * * ?"
-decs.scheduler.adaptive="0 10,30 * * * ?"
+decs.scheduler.adaptive1="0 10 * * * ?"
+decs.scheduler.adaptive2="0 30 * * * ?"
+
 
 decs.popularity-threshold=10
 decs.tc=0.2
@@ -28,5 +38,5 @@ decs.ti=0.1
 # alpha = 1 means ignore prediction result
 decs.alpha=1 
 decs.beta=1
-decs.gamma=1
+decs.gamma=1 
 
