Fix: Use Double.NEGATIVE_INFINITY instead of Double.MIN_VALUE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=decs-zzbslayer
-server.port=9002
+server.port=9004
 
 eureka.client.enabled=true
 eureka.client.service-url.defaultZone=http://127.0.0.1:8761/eureka/
@@ -31,6 +31,7 @@ decs.scheduler.lstm=0 50 * * * ?
 decs.scheduler.adaptive1=0 10 * * * ?
 decs.scheduler.adaptive2=0 30 * * * ?
 
+decs.replica-threshold=3
 
 decs.popularity-threshold=10
 decs.tc=0.2
